--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.9",
+    "@tailwindcss/vite": "^4.0.11",
     "amqplib": "^0.10.5",
+    "axios": "^1.8.2",
     "framer-motion": "^12.4.10",
     "lucide-react": "^0.477.0",
+    "marked": "^15.0.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.3.0",
     "swiper": "^11.2.4",
     "tailwind": "^4.0.0"
   },
@@ -31,7 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.9",
+    "tailwindcss": "^4.0.11",
     "vite": "^6.2.0"
   }
 }
